[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tumblr-posts"
version = "0.1.0"
description = "CLI to publish plain-text Tumblr posts from files"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "tumblr-posts contributors" }
]
dependencies = [
  "requests>=2.31.0",
  "typer>=0.12.0",
]

[project.scripts]
tumblr-posts = "tumblr_posts.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tumblr_posts*"]
